--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div id="close-login-btn" class="fas fa-times"></div>
 
-    <form action="subscribe.html" name="myform" method="post" onsubmit="return validateform()">
+    <form action="/ProjectWork/subscribe.html" name="myform" method="post" onsubmit="return validateform()">
         <h3>sign in</h3>
         <span>username</span>
         <input type="email" name="name" class="box" placeholder="enter your email" id="">
